# rinha-2025

./: .gitignore  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  go.mod  go.sum  haproxy.cfg  init.sql  nginx.conf
cmd/api/: main.go
cmd/server/: main.go
cmd/worker/: main.go
config/: appconfig.go  telemetry.go
gateway/: Cargo.toml  Dockerfile
gateway/src/: gateway.rs  main.rs  publisher.rs
internal/payments/: message.go  payment.go  processor.go  service.go  store.go  summary.go
internal/payments/handlers/: payment.go  purge.go  sumary.go
internal/payments/workers/: db_batcher.go  pool.go  service_monitor.go  worker.go
loadbalancer/: Cargo.toml  Dockerfile  docker-compose.yml
loadbalancer/src/: load_balancer.rs  main.rs  uds_round_robin.rs
server/: Dockerfile  Dockerfile.worker
server/cmd/server/: main.go
server/cmd/worker/: main.go
server/config/: appconfig.go  config.yaml
server/internal/messages/: publisher.go  receiver.go
server/internal/payments/: message.go  payment.go  processor.go  store.go
server/internal/payments/handlers/: payment.go  purge.go  summary.go
server/internal/payments/workers/: pool.go  service_monitor.go
worker/: .gitignore  Cargo.toml  Dockerfile
worker/src/: health_monitor.rs  main.rs  payment.rs  payment_message.rs  payment_processor.rs  processor_type.rs  receiver.rs  store.rs  worker_pool.rs
