[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-time-0_3"] }
rust_decimal = { version = "1.37", features = ["db-tokio-postgres", "serde", "serde_json", "serde-float"] }
deadpool-postgres = "0.14"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1"
serde = { version = "1.0.219", features = ["derive"] }
form_urlencoded = "1.2.1"
time = { version = "0.3", features = ["parsing"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target.'cfg(target_arch = "x86_64")']
rustflags = ["-C", "target-cpu=native"]