[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-time-0_3", "with-uuid-1"] }
rust_decimal = { version = "1.37", features = ["db-tokio-postgres", "serde", "serde_json"] }
deadpool-postgres = "0.14"
futures-util = "0.3"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde_json = "1"
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3", features = ["parsing", "serde", "serde-well-known"] }
bytes = "1.10.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
